XYZ Technologies Project2 files Commit

--- a/deploy_xyz.yaml
+++ b/deploy_xyz.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: abc-tech2-deploy
+  name: xyz-tech-deploy
 spec:
   selector:
     matchLabels:
-      app: abc_deploy2
+      app: xyz_deploy
   replicas: 3
   template:
     metadata:
       labels:
-        app: abc_deploy2
+        app: xyz_deploy
     spec:
       containers:
-      - name: abc-app2
-        image: tgreddy1/abc_tech2:latest
+      - name: xyz-app
+        image: tgreddy1/xyz_tech:latest
         ports:
         - containerPort: 8080
