--- a/svc_xyz.yaml
+++ b/svc_xyz.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: abc-nodeport-svc2
+  name: xyz-nodeport-svc
 spec:
   selector:
-    app: abc_deploy2
+    app: xyz_deploy
   ports:
     - protocol: TCP
       port: 80
